--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,6 +51,8 @@ set-option -ga terminal-overrides ",xterm-256color:RGB"
 # ---------------------------------------------------------
 
 # dracula options
+# set -g @dracula-show-powerline true
+set -g @dracula-show-left-icon smiley
 set -g @dracula-left-icon-padding 2
 set -g @dracula-show-location false
 set -g @dracula-show-fahrenheit false
@@ -59,8 +61,8 @@ set -g @dracula-show-flags true
 set -g @dracula-military-time true
 
 ## highlight active window
-setw -g window-style 'bg=#282a2e'
-# setw -g window-active-style 'bg=#1d1f21'
+set -g window-style 'fg=#f8f8f2,bg=#1d1f21'
+set -g window-active-style 'fg=#f8f8f2,bg=#282a36'
 setw -g pane-active-border-style ''
 
 set -g clock-mode-colour "#81a2be"
