--- a/sway/config
+++ b/sway/config
@@ -1,14 +1,8 @@
 # Default config for sway
-#
-# Copy this to ~/.config/sway/config and edit it to your liking.
-#
-# Read `man 5 sway` for a complete reference.
 
 ### Variables
-#
 # Logo key. Use Mod1 for Alt.
 set $menu wofi -G --show drun | xargs swaymsg exec --
-
 set $mod Mod4
 # Home row direction keys, like vim
 set $left h
@@ -29,7 +23,7 @@ output "*" bg /usr/share/backgrounds/archlinux/arch_wallpaper2.jpg fill
 #
 # Example configuration:
 #
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
+output HDMI-A-1 resolution 1360x768
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
@@ -307,3 +301,6 @@ bindsym XF86AudioPrev exec playerctl previous
 #bluetooth
 exec blueman-applet
 for_window [app_id="blueman-manager"] floating enable
+
+#for_window [app_id="FloatingVim"] floating enable
+#bindsym $mod+i exec XMODIFIERS=@im= ~/.config/sway/ime.sh
