--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -6,7 +6,7 @@
 
     "modules-left": ["sway/workspaces"],
     "modules-center": ["sway/window"],
-    "modules-right": ["custom/pacman","pulseaudio","battery","network","clock"],
+    "modules-right": ["custom/Waybar-Clockify","custom/pacman","pulseaudio","battery","network","clock"],
     "height":30,
     "custom/arch": {
       "format": "  ",
@@ -136,5 +136,11 @@
             "default": ["", "", ""]
         },
         "on-click": "pavucontrol"
+    },
+    "custom/Waybar-Clockify": {
+        "format": "⏱ {} ",
+        "exec": "~/.config/waybar/scripts/Waybar-Clockify/main.sh",
+        "on-click": "~/.config/waybar/scripts/Waybar-Clockify/click.sh",
+        "on-click-right": "~/.config/waybar/scripts/Waybar-Clockify/stop.sh",
     },
 }
